@@ -172,7 +172,6 @@ init_reswords (void)
   tree id;
   int mask = 0;
 
-  mask |= D_CONLY;
   if (cxx_dialect != cxx0x)
     mask |= D_CXX0X;
   if (flag_no_asm)
@@ -186,6 +185,8 @@ init_reswords (void)
   ridpointers = GGC_CNEWVEC (tree, (int) RID_MAX);
   for (i = 0; i < num_c_common_reswords; i++)
     {
+      if (c_common_reswords[i].disable & D_CONLY)
+	continue;
       id = get_identifier (c_common_reswords[i].word);
       C_SET_RID_CODE (id, c_common_reswords[i].rid);
       ridpointers [(int) c_common_reswords[i].rid] = id;
