@@ -1,5 +1,8 @@
 2008-09-16  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/37532
+	* g++.dg/parse/crash46.C: New test.
+
 	PR testsuite/36889
 	* lib/fortran-torture.exp (get-fortran-torture-options): Only
 	set test_tree_vectorize on i?86/x86_64 resp. sparc* if sse2 resp.
